--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.525.0",
         "@apollo/client": "^3.7.1",
+        "@aws-sdk/client-s3": "^3.525.0",
         "@bull-board/api": "^4.6.4",
         "@bull-board/express": "^4.6.4",
-        "@mintproject/modelcatalog_client": "^8.0.0",
+        "@kubernetes/client-node": "^0.21.0",
         "@mfosorio/tapis-typescript": "0.0.30",
+        "@mintproject/modelcatalog_client": "^8.0.0",
         "@types/fs-extra": "^8.0.1",
         "@types/request": "^2.48.3",
         "@types/request-promise-native": "^1.0.17",
